--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
     <div class="content-block">
         <h3>FAQ:</h3>
         <ul>
-            <li><b>Mobile Playback Fee:</b> There's a one-time fee of $5 for unlocking mobile playback.</li>
+            <li><b>Mobile Playback Fee:</b> There's a one-time fee of $5 for unlocking mobile playback. This is charged by Plex via your mobile app store, not by me.</li>
             <li><b>Account Sharing:</b> Please don't share your account. If you have friends interested in joining, let me know, and I'll send them an invitation.</li>
-            <li><b>Requests:</b> Requests can be made <a href="https://request.bigbearplex.me">Here</a>. Just sign in via Plex when prompted.</li>
+            <li><b>Requests:</b> Requests can be made here: <a href="https://request.bigbearplex.me">https://request.bigbearplex.me</a>. Just sign in via Plex when prompted.</li>
             <li><b>Reporting Issues:</b> If you encounter any issues with video files, audio, language issues, etc., please report them in Plex or Overseer so they can be addressed promptly.</li>
             <li><b>Best Experience with Plex:</b> For the best experience with Plex, follow the instructions provided for each platform or device. I personally recommend Chromecast or Nvidia Shield as the best devices.</li>
             <li><b>Platform Improvements & Downtime:</b> Sometimes I make updates and have to shut down the server. Usually, I try to do it when no one is watching, but if the server is down temporarily, go touch grass. I'll try to communicate major outages to users in advance.</li>
