--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         /* Link styling */
         a {
-            color: #E5A00D;
+            color: #057a36;
             text-decoration: underline;
         }
 
@@ -243,7 +243,7 @@
 
         .close:hover,
         .close:focus {
-            color: #E5A00D;
+            color: #0d84e5;
         }
     </style>
 </head>
