--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             cursor: pointer; /* Pointer cursor for clickable images */
         }
 
-        /* Smaller step 14 image */
+        /* Small image */
         .small-image {
             max-width: 400px; /* Half the size of other images */
         }
 
-        /* Smaller step 14 image */
+        /* Smaller image */
         .smaller-image {
             max-width: 300px; /* smaller than small */
         }
@@ -223,7 +223,7 @@
             margin: 15% auto;
             padding: 20px;
             width: 80%;
-            max-width: 700px;
+            max-width: 100%;
         }
 
         .popup img {
