--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
         /* Image styling */
         img {
             width: 100%;
-            max-width: 800px; /* Large enough to view details */
+            max-width: 100%; /* Large enough to view details */
             display: block;
             margin: 20px auto; /* Center images */
             border-radius: 8px; /* Soft rounded corners for a modern look */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
             cursor: pointer; /* Pointer cursor for clickable images */
+        }
+
+        /* Medium image */
+        .med-image {
+            max-width: 800px; /* Half the size of other images */
         }
 
         /* Small image */
@@ -259,43 +264,43 @@
 
         <h3>Where is Plex Available?</h3>
         <p>Plex is available globally and works on most devices, including smartphones, tablets, smart TVs, computers, and streaming devices like Roku, Fire TV, Apple TV, and Xbox. There's an app for each of these platforms, so you can access it virtually anywhere with an internet connection!</p>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/platforms.png" alt="Where is Plex Available?">
+        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/platforms.png" alt="Where is Plex Available?" class="med-image">
     </div>
 
     <div class="content-block">
         <h3>1. Getting Started! Go to Plex.tv</h3>
 
         <h3>2. Click on Sign Up</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step02.png" alt="Sign Up">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step02.png" alt="Sign Up" class="med-image">
 
         <h3>3. Sign up using one of the methods provided</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step03.png" alt="Sign up Methods">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step03.png" alt="Sign up Methods" class="med-image">
 
         <h3>4. Once your account is created, Go to app.plex.tv and when prompted change privacy settings</h3>
         <ul>Go to both of the indicated sections</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy" class="med-image">
         <ul>Change everything to Private</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="med-image">
         <ul>Change to Off</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="med-image">
 
         <h3>5. Click on the settings icon located in the top right</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step05.png" alt="Settings Icon">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step05.png" alt="Settings Icon" class="med-image">
 
         <h3>6. Within settings, click on Manage Library Access</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step06.png" alt="Manage Library Access">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step06.png" alt="Manage Library Access" class="med-image">
 
         <h3>7. You should see the server you have been invited to here. If necessary click the check mark to accept access</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step07.png" alt="Accept Invite">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step07.png" alt="Accept Invite" class="med-image">
 
         <h3>8. Next, click the home icon to return to the main page</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step08.png" alt="Home Icon">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step08.png" alt="Home Icon" class="med-image">
 
         <h3>9. From home, select 'More'</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step09.png" alt="Select 'More'">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step09.png" alt="Select 'More'" class="med-image">
 
         <h3>10. You will see the server with the following libraries: 4K Local, Audiobooks, Movies, TV Shows</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step10.png" alt="Pin Libraries">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step10.png" alt="Pin Libraries" class="med-image">
 
         <h3>11. Hover over each and click the three dots to Pin all four libraries (and playlists if you intend to use them)</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step11.png" alt="Pin Movies and TV Shows" class="small-image">
@@ -305,18 +310,18 @@
 
         <h3>13. Click on Pinned, your menu should now look like the image below</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned" class="smaller-image">
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13a.png" alt="Menu Overview">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13a.png" alt="Menu Overview" class="med-image">
 
         <h3 class="quality-header">Quality Settings:</h3>
 
         <h3>14. Next, click on the Settings icon, then go to Quality in the sidebar under Plex Web</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step14.png" alt="Go to Quality">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step14.png" alt="Go to Quality" class="med-image">
 
         <h3>15. Under Internet Streaming, beside Video Quality choose Maximum</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step15.png" alt="Internet Streaming">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step15.png" alt="Internet Streaming" class="med-image">
 
         <h3>16. Uncheck "Use recommended settings" and set both Home Streaming and Internet Streaming to Maximum. Click Save Changes, then click the home icon in the top left corner to return to the main page</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step16.png" alt="Maximum Quality">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step16.png" alt="Maximum Quality" class="med-image">
 
         <h3>17. For every new Plex client you setup you'll need change these settings once when first signing in. You'll also need to pin and unpin as describe above. Here some guides to changing the quality settings for the most popular clients:</h3>
         <qul>iOS and Android app:</qul>
