--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         /* Image styling */
         img {
             width: 100%;
-            max-width: 100%; /* Large enough to view details */
+            max-width: max-content; /* Large enough to view details */
             display: block;
             margin: 20px auto; /* Center images */
             border-radius: 8px; /* Soft rounded corners for a modern look */
