--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         /* Medium image */
         .med-image {
-            max-width: 800px; /* Half the size of other images */
+            max-width: 90%; /* 90 */
         }
 
         /* Small image */
