--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 
         /* Medium image */
         .med-image {
-            max-width: 90%; /* 90 */
+            max-width: 1200px; /* 90 */
         }
 
         /* Small image */
         .small-image {
-            max-width: 400px; /* Half the size of other images */
+            max-width: 800px; /* Half the size of other images */
         }
 
         /* Smaller image */
         .smaller-image {
-            max-width: 300px; /* smaller than small */
+            max-width: 600px; /* smaller than small */
         }
 
         /* New section indicator */
