--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
         /* Small image */
         .small-image {
-            max-width: 800px; /* Half the size of other images */
+            max-width: 400px; /* Half the size of other images */
         }
 
         /* Smaller image */
         .smaller-image {
-            max-width: 600px; /* smaller than small */
+            max-width: 300px; /* smaller than small */
         }
 
         /* New section indicator */
@@ -280,9 +280,9 @@
         <ul>Go to both of the indicated sections</ul>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy" class="med-image">
         <ul>Change everything to Private</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="med-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="small-image">
         <ul>Change to Off</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="med-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="small-image">
 
         <h3>5. Click on the settings icon located in the top right</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step05.png" alt="Settings Icon" class="med-image">
