--- a/index.html
+++ b/index.html
@@ -64,17 +64,22 @@
 
         /* Medium image */
         .med-image {
-            max-width: 1200px; /* 90 */
+            max-width: 1200px; /* Medium */
+        }
+
+        /* Medium-Small image */
+        .med-small-image {
+            max-width: 600px; /* Medium Small */
         }
 
         /* Small image */
         .small-image {
-            max-width: 400px; /* Half the size of other images */
+            max-width: 400px; /* Small */
         }
 
         /* Smaller image */
         .smaller-image {
-            max-width: 300px; /* smaller than small */
+            max-width: 300px; /* Smaller than small */
         }
 
         /* New section indicator */
@@ -280,9 +285,9 @@
         <ul>Go to both of the indicated sections</ul>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy" class="med-image">
         <ul>Change everything to Private</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="small-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="med-small-image">
         <ul>Change to Off</ul>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="small-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="med-small-image">
 
         <h3>5. Click on the settings icon located in the top right</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step05.png" alt="Settings Icon" class="med-image">
