--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step03.png" alt="Sign up Methods" class="med-image">
 
         <h3>4. Once your account is created, Go to app.plex.tv and when prompted change privacy settings</h3>
-        <ul>Go to both of the indicated sections</ul>
+        <qul>Go to both of the indicated sections</qul>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy" class="med-image">
-        <ul>Change everything to Private</ul>
+        <qul>Change everything to Private</qul>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access" class="med-small-image">
-        <ul>Change to Off</ul>
+        <qul>Change to Off</qul>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter" class="med-small-image">
 
         <h3>5. Click on the settings icon located in the top right</h3>
